@@ -1,3 +1,7 @@
+2003-08-06  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tclWinInit.c: recognize amd64 and ia32_on_win64 cpus.
+
 2003-08-06  Don Porter  <dgp@users.sourceforge.net>
 
 	* library/msgcat/msgcat.tcl:	Added escape so that non-Windows
